News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/Portfolio_Process_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Control settings related to the Portfolio Batch Apex</description>
    <label>Portfolio Process Settings</label>
    <pluralLabel>Portfolio Process Settings</pluralLabel>
</CustomObject>