News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/fields/Delete_Staging_on_complete__c.field-meta.xml
<CustomField>
    <fullName>Delete_Staging_on_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable in the Batch Apex to delete the Portfolio_Staging__c object records once the batch has successfully completed</description>
    <inlineHelpText>Delete after Batch complete for Portfolio Sync</inlineHelpText>
    <label>Delete Staging on complete</label>
    <type>Checkbox</type>
</CustomField>