News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/fields/Ignore_Opportunities_Before__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Opportunities_Before__c</fullName>
    <inlineHelpText>Ignore opportunities createddate is before the specified date for portfolio reassignment batch apex</inlineHelpText>
    <label>Ignore Opportunities Before</label>
    <type>Date</type>
</CustomField>