News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/fields/Primary_alert_email_address__c.field-meta.xml
<CustomField>
    <fullName>Primary_alert_email_address__c</fullName>
    <description>which email address will receive when staging is empty or other related errors during the batch process</description>
    <inlineHelpText>Default will be the system administrators of AdSales</inlineHelpText>
    <label>Primary alert email address</label>
    <type>Email</type>
</CustomField>