News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/fields/Secondary_alert_email_address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_alert_email_address__c</fullName>
    <description>Send email to data services team group email when the staging objects are empty</description>
    <inlineHelpText>Enter the Data Services team email address</inlineHelpText>
    <label>Secondary alert email address</label>
    <type>Email</type>
</CustomField>