News UAT/force-app/main/default/objects/Portfolio_Process_Settings__mdt/fields/Send_Email_when_staging_is_empty__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_when_staging_is_empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If no records are in scope for batch process, send email to Data Services to reload the records to Portfolio_Staging__c</description>
    <label>Send Email when staging is empty</label>
    <type>Checkbox</type>
</CustomField>